# AliceAndroid

./: .editorconfig  .gitignore  FrewenAndroidScheme.icls  FrewenAndroidStyle.xml  README.md  build.gradle  ext_dependence.gradle  gradle.properties  module_dependence.gradle  settings.gradle
SDKSource/: README.md
SDKSource/android-28/android/app/: Activity.java  ActivityManager.java  ActivityThread.java  ContextImpl.java  Instrumentation.java
SDKSource/android-28/android/content/: Context.java
SDKSource/android-28/android/databinding/: Observable.java  PropertyChangeRegistry.java  ViewDataBinding.java
SDKSource/android-28/android/os/: MessageQueue.java  Process.java  ZygoteProcess.java
SDKSource/android-28/android/view/: ViewGroup.java
SDKSource/android-28/androidx/appcompat/app/: AppCompatDelegateImpl.java
SDKSource/android-28/androidx/asynclayoutinflater/view/: AsyncLayoutInflater.java
SDKSource/android-28/androidx/coordinatorlayout/widget/: CoordinatorLayoutActivity.java
SDKSource/android-28/androidx/fragment/app/: FragmentActivity.java
SDKSource/android-29/android/app/: Activity.java  ActivityManager.java  ActivityManagerNative.java  ActivityTaskManager.java  ActivityThread.java  ClientTransactionHandler.java  ContextImpl.java  Dialog.java  Instrumentation.java  IntentService.java  LoadedApk.java  Service.java  SystemServiceRegistry.java
SDKSource/android-29/android/content/: Context.java  ContextWrapper.java
SDKSource/android-29/android/database/: Cursor.java
SDKSource/android-29/android/graphics/: Bitmap.java  BitmapFactory.java  HardwareRenderer.java
SDKSource/android-29/android/media/: MediaPlayer.java  PlayerBase.java
SDKSource/android-29/android/os/: Handler.java  Looper.java  Message.java  MessageQueue.java  PowerManager.java  ServiceManager.java  ZygoteProcess.java
SDKSource/android-29/android/util/: LruCache.java  Singleton.java  SparseArray.java
SDKSource/android-29/android/view/: Choreographer.java  HandlerActionQueue.java  LayoutInflater.java  View.java  ViewGroup.java  ViewManager.java  ViewParent.java  ViewRootImpl.java  ViewTreeObserver.java  Window.java  WindowManager.java  WindowManagerGlobal.java  WindowManagerImpl.java
SDKSource/android-29/android/widget/: TextView.java  Toast.java
SDKSource/android-29/java/lang/: Thread.java  ThreadLocal.java
SDKSource/android-29/java/util/: ArrayDeque.java  HashSet.java  LinkedList.java  Queue.java
alice-android-app/: .gitignore  build.gradle
alice-android-app/src/main/: AndroidManifest.xml
alice-android-app/src/main/assets/: destination.json
alice-android-app/src/main/cpp/: hello-jni.cpp
alice-demo-jetpack-sunflower/: build.gradle
aura-gradle-plugin/: build.gradle
aura-gradle-plugin/src/main/: AndroidManifest.xml
aura-logger/: build.gradle
aura-logger/src/main/: AndroidManifest.xml
aura-navigation-compiler/: build.gradle
aura-navigation/aura-navigation-compiler/: build.gradle
aura-network/: build.gradle
aura-network/schemas/com.frewen.network.cache.CacheDataBase/: 1.json
aura-perf-guard-core/src/main/: AndroidManifest.xml
aura-perf-guard/aura-perf-guard-core/: build.gradle
aura-perf-guard/aura-perf-gurad-monitor/: build.gradle
aura-perf-guard/aura-perf-gurad-monitor/src/main/: AndroidManifest.xml
aura-perf-gurad-monitor/: build.gradle
blog/docs/gradle/: 01.gradle-basic.md  02.gradle-task.md
blog/docs/nyx_video/: NyxVideoPlayer.md
docs/: dagger2-study.md
docs/nyx_video/: NyxVideoPlayer.md
free-network/: .project  build.gradle
free-network/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
gradle_demo/: git_info.gradle  gradle_closure.gradle  gradle_custom_task.gradle  gradle_ext_property.gradle  gradle_task.gradle  gradle_task_api.gradle  gradle_task_dependence.gradle  gradle_task_dependencies.gradle  gradle_task_in_order.gradle
hooks/: install-git-hooks.gradle  pre-commit
nyx-android-app/: build.gradle
nyx-android-app-library/: build.gradle
nyx-android-app-library/src/main/: AndroidManifest.xml
nyx-android-app-login/: build.gradle
nyx-android-app-login/src/main/: AndroidManifest.xml
nyx-android-app/src/main/: AndroidManifest.xml
nyx-android-app/src/main/assets/: destination.json  main_tabs_config.json
nyx-android-app/src/main/cpp/: CMakeLists.txt  dynamic-register-jni.cpp  hello-jni.cpp
nyx-android-app/src/main/cpp/base/: base.h
nyx-android-app/src/main/cpp/base/utils/: AuraLogger.h  AuraSyncLock.h
nyx-android-app/src/main/cpp/jni/: jni_access_field.cpp  jni_access_field.h  jni_basic_type.cpp  jni_dynamic_load.cpp  jni_nyx_opengl_es.cpp
nyx-android-app/src/main/cpp/opengl/: nyx_opengl_es_context.cpp  nyx_opengl_es_context.h
nyx-android-app/src/main/cpp/opengl/samples/: BeatingHeartSample.cpp  BeatingHeartSample.h  GLSampleBase.h  TriangleSample.cpp  TriangleSample.h
nyx-android-app/src/main/cpp/opengl/utils/: ImageDef.h  OpenGLUtil.cpp
nyx-android-app/src/main/cpp/opengles/: hello_opengl_es.cpp
nyx-android-app/src/main/cpp/people/: People.cpp  People.h
nyx-android-app/src/main/protobuf/: Login.proto
nyx-demo-hilt/src/main/: AndroidManifest.xml
nyx-demo-jetpack-sunflower/: build.gradle
nyx-demo-jetpack-sunflower/src/main/: AndroidManifest.xml
openCVLibrary3412/: build.gradle
optimusnetwork/: .project  build.gradle
optimusnetwork/src/main/: AndroidManifest.xml
quality/: quality.gradle
quality/checkstyle/: checkstyle.xml
quality/hooks/: install-git-hooks.gradle
router-annotation/: .project  build.gradle
router-api/: .project
router-compiler/: .project  build.gradle
router-stub/: .project
tool_kits/: artifactory-stop.sh
toolkits/: artifactory-start.sh  gradle_test.gradle
toolkits/gradle/: parseLocalProperties.gradle
toolkits/quality/: quality.gradle
toolkits/quality/checkstyle/: checkstyle.xml
toolkits/quality/hooks/: pre-commit
tyche-android-app/: .gitignore  .project  build.gradle
tyche-android-app-library/: build.gradle
tyche-android-app-library/src/main/: AndroidManifest.xml
tyche-android-app/src/main/: AndroidManifest.xml
(+1581 files in other folders)
